objects/Product_HPCC_Codes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPCC_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HPCC_Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Incentive Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum__c</fullName>
        <label>Minimum</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PackageEffDt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PackageEffDt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PackageEndDt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PackageEndDt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Product HPCC Code</label>
    <listViews>
        <fullName>Parent_Products</fullName>
        <columns>Package_Name__c</columns>
        <columns>State__c</columns>
        <columns>HPCC_Code__c</columns>
        <columns>Incentive_Type__c</columns>
        <columns>PackageEffDt__c</columns>
        <columns>PackageEndDt__c</columns>
        <columns>Parent_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>Parent Products</label>
    </listViews>
</CustomObject>